# quiver

./: .gitignore  CLAUDE.md  Cargo.toml  PLAN.md  README.md  rustfmt.toml
.claude/: settings.json
.github/workflows/: ci.yml
benches/: tasks.json
crates/agent/: Cargo.toml
crates/agent/src/: classify.rs  digest.rs  engine.rs  hint.rs  lib.rs  recommend.rs  tail.rs
crates/agent/tests/: classify.rs  relevance.rs
crates/cli/: Cargo.toml  README.md
crates/cli/assets/quiver-pilot/: SKILL.md
crates/cli/src/: db_path.rs  main.rs
crates/cli/src/commands/: add.rs  agent.rs  dead_weight.rs  digest.rs  hook.rs  init.rs  list.rs  mcp.rs  persist.rs  recommend.rs  remove.rs  score.rs  serve.rs  stats.rs  sync.rs  tui.rs  update.rs
crates/cli/src/tui/: app.rs  event.rs  filter.rs  mod.rs  view.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs  source.rs  tool.rs  usage.rs
crates/ingestion/: Cargo.toml
crates/ingestion/src/: cost.rs  git_clone.rs  github_repo.rs  lib.rs  llm_extract.rs  mcp_json.rs  mcp_npm.rs  persist.rs  plugin_json.rs  plugin_manifest.rs  project_scope.rs  session_jsonl.rs  skill_md.rs  sync.rs  walker.rs
crates/ingestion/tests/: llm_extract.rs  mcp_npm.rs  plugin_manifest.rs
crates/llm/: Cargo.toml
crates/llm/src/: backend.rs  intent.rs  lib.rs  task.rs
crates/mcp-server/: Cargo.toml
crates/mcp-server/src/: lib.rs  schema.rs  server.rs
crates/recommender/: Cargo.toml
crates/recommender/src/: embed.rs  excerpt.rs  intent.rs  lib.rs  params.rs  policy.rs  project.rs  rerank.rs  search.rs
crates/storage/: Cargo.toml
crates/storage/migrations/: 001_init.sql  002_fts.sql  003_vec.sql  004_embeddings.sql  005_usage_uuid.sql  006_agent_suggestions.sql  007_mcp_npm_cache.sql  008_mcp_npm_tombstone.sql  009_suggestions_enforcement.sql  010_auto_tuner.sql  011_project_scope.sql  012_turn_intents.sql
crates/storage/src/: embeddings.rs  fts.rs  lib.rs  mcp_npm.rs  pool.rs  scores.rs  sources.rs  suggestions.rs  tools.rs  turn_intents.rs  usage.rs
crates/web/: Cargo.toml
crates/web/src/: assets.rs  error.rs  lib.rs  sse.rs  state.rs  views.rs
crates/web/src/routes/: catalog.rs  mod.rs  recommend.rs  sources.rs  stats.rs  suggestions.rs  vetoes.rs
crates/web/static/: VERSIONS.md  app.css
crates/web/templates/: base.html  catalog.html  catalog_list.html  recommend.html  recommend_results.html  recommendation_card.html  sources.html  sources_sync_result.html  stats.html  suggestion_row.html  suggestions.html  tool_card.html  tool_detail.html  vetoes.html
crates/web/tests/: routes.rs  sse.rs
docs/: mcp-tools.md
tests/fixtures/: installed_plugins.json  mcp_servers.json
tests/fixtures/github_repos/doc_only/: README.md
tests/fixtures/github_repos/doc_with_readme/: README.md
tests/fixtures/github_repos/plugin_marketplace/: marketplace.json
tests/fixtures/github_repos/skill_bundle/skills/alpha-skill/: SKILL.md
tests/fixtures/github_repos/skill_bundle/skills/beta-skill/: SKILL.md
tests/fixtures/plugin_cache/test-market/test-plugin/1.0.0/: README.md
tests/fixtures/plugin_cache/test-market/test-plugin/1.0.0/.claude-plugin/: plugin.json
