[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/storage",
    "crates/ingestion",
    "crates/recommender",
    "crates/llm",
    "crates/mcp-server",
    "crates/agent",
    "crates/cli",
    "crates/web",
]

[workspace.package]
version = "0.1.4"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/deiu25/quiver"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rusqlite = { version = "0.32", features = ["bundled"] }
refinery = { version = "0.8", features = ["rusqlite"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
tempfile = "3"
walkdir = "2"
fastembed = "4"
sqlite-vec = "0.1"
ratatui = "0.29"
crossterm = "0.28"
rmcp = { version = "1", features = ["server", "macros", "transport-io", "schemars"] }
schemars = "1"
notify = "6.1"
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "fs"] }
tokio-stream = "0.1"
futures-util = "0.3"
async-stream = "0.3"
askama = "0.12"
rust-embed = "8"
mime_guess = "2"
webbrowser = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
async-trait = "0.1"
