[package]
name = "toolhub-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Background daily-task agent that observes Claude Code sessions and writes hint files"

[dependencies]
toolhub-core = { path = "../core", version = "0.1.0" }
toolhub-storage = { path = "../storage", version = "0.1.0" }
toolhub-ingestion = { path = "../ingestion", version = "0.1.0" }
toolhub-recommender = { path = "../recommender", version = "0.1.0" }
anyhow = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
walkdir = { workspace = true }
notify = { workspace = true }
rusqlite = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
