[package]
name = "quiver-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Background daily-task agent that observes Claude Code sessions and writes hint files"

[dependencies]
quiver-core = { path = "../core", version = "0.1.4" }
quiver-storage = { path = "../storage", version = "0.1.4" }
quiver-ingestion = { path = "../ingestion", version = "0.1.4" }
quiver-recommender = { path = "../recommender", version = "0.1.4" }
anyhow = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
walkdir = { workspace = true }
notify = { workspace = true }
rusqlite = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
axum = { workspace = true }
