[package]
name = "toolhub"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Local tool registry, recommender, and background agent for Claude Code"
keywords = ["claude-code", "cli", "registry", "recommender", "mcp"]
categories = ["command-line-utilities", "development-tools"]
homepage = "https://github.com/deiu25/quiver"
documentation = "https://github.com/deiu25/quiver"
readme = "README.md"

[[bin]]
name = "toolhub"
path = "src/main.rs"

[dependencies]
toolhub-core = { path = "../core", version = "0.1.0" }
toolhub-storage = { path = "../storage", version = "0.1.0" }
toolhub-ingestion = { path = "../ingestion", version = "0.1.0" }
toolhub-recommender = { path = "../recommender", version = "0.1.0" }
toolhub-mcp-server = { path = "../mcp-server", version = "0.1.0" }
toolhub-agent = { path = "../agent", version = "0.1.0" }
toolhub-web = { path = "../web", version = "0.1.0" }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
walkdir = { workspace = true }
rusqlite = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
chrono = { workspace = true }
