[package]
name = "quiver"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Local tool registry, recommender, and background agent for Claude Code"
keywords = ["claude-code", "cli", "registry", "recommender", "mcp"]
categories = ["command-line-utilities", "development-tools"]
homepage = "https://github.com/deiu25/quiver"
documentation = "https://github.com/deiu25/quiver"
readme = "README.md"

[[bin]]
name = "quiver"
path = "src/main.rs"

[dependencies]
quiver-core = { path = "../core", version = "0.1.0" }
quiver-storage = { path = "../storage", version = "0.1.0" }
quiver-ingestion = { path = "../ingestion", version = "0.1.0" }
quiver-recommender = { path = "../recommender", version = "0.1.0" }
quiver-mcp-server = { path = "../mcp-server", version = "0.1.0" }
quiver-agent = { path = "../agent", version = "0.1.0" }
quiver-web = { path = "../web", version = "0.1.0" }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
walkdir = { workspace = true }
rusqlite = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
chrono = { workspace = true }
