[package]
name = "toolhub-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Domain types and traits for the toolhub workspace"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
