[package]
name = "toolhub-ingestion"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
toolhub-core = { path = "../core" }
toolhub-storage = { path = "../storage" }
toolhub-recommender = { path = "../recommender" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
chrono = { workspace = true }
rusqlite = { workspace = true }
walkdir = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "fs", "process"] }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
