[package]
name = "quiver-ingestion"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Skill, plugin, MCP, GitHub, and session JSONL ingestion parsers for quiver"

[dependencies]
quiver-core = { path = "../core", version = "0.1.0" }
quiver-storage = { path = "../storage", version = "0.1.0" }
quiver-recommender = { path = "../recommender", version = "0.1.0" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
chrono = { workspace = true }
rusqlite = { workspace = true }
walkdir = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "fs", "process"] }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
