[package]
name = "quiver-ingestion"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Skill, plugin, MCP, GitHub, and session JSONL ingestion parsers for quiver"

[dependencies]
quiver-core = { path = "../core", version = "0.1.2" }
quiver-storage = { path = "../storage", version = "0.1.2" }
quiver-recommender = { path = "../recommender", version = "0.1.2" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
chrono = { workspace = true }
rusqlite = { workspace = true }
walkdir = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "fs", "process", "time"] }
tracing = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "fs", "process", "time", "test-util"] }
