[package]
name = "quiver-llm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Sonnet-backed classifiers (task triage + intent) shared by the daily-task agent and Claude Code hook layer"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "fs", "process", "io-util"] }
tracing = { workspace = true }

[dev-dependencies]
axum = { workspace = true }
tempfile = { workspace = true }
