[package]
name = "toolhub-mcp-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
toolhub-core = { path = "../core" }
toolhub-storage = { path = "../storage" }
toolhub-recommender = { path = "../recommender" }
toolhub-ingestion = { path = "../ingestion" }
anyhow = { workspace = true }
chrono = { workspace = true }
rmcp = { workspace = true }
rusqlite = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "fs", "process", "io-util", "time"] }
chrono = { workspace = true }
