[package]
name = "toolhub-mcp-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "rmcp stdio MCP server exposing toolhub tools to Claude Code"

[dependencies]
toolhub-core = { path = "../core", version = "0.1.0" }
toolhub-storage = { path = "../storage", version = "0.1.0" }
toolhub-recommender = { path = "../recommender", version = "0.1.0" }
toolhub-ingestion = { path = "../ingestion", version = "0.1.0" }
anyhow = { workspace = true }
chrono = { workspace = true }
rmcp = { workspace = true }
rusqlite = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "fs", "process", "io-util", "time"] }
chrono = { workspace = true }
