[package]
name = "toolhub-recommender"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Hybrid FTS + sqlite-vec cosine recommender with success-rate reranker for toolhub"

[dependencies]
toolhub-core    = { path = "../core", version = "0.1.0" }
toolhub-storage = { path = "../storage", version = "0.1.0" }
anyhow          = { workspace = true }
fastembed       = { workspace = true }
rusqlite        = { workspace = true }
