[package]
name = "quiver-recommender"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Hybrid FTS + sqlite-vec cosine recommender with success-rate reranker for quiver"

[dependencies]
quiver-core    = { path = "../core", version = "0.1.3" }
quiver-storage = { path = "../storage", version = "0.1.3" }
anyhow          = { workspace = true }
fastembed       = { workspace = true }
rusqlite        = { workspace = true }

[dev-dependencies]
chrono   = { workspace = true }
tempfile = { workspace = true }
