[package]
name = "quiver-recommender"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Hybrid FTS + sqlite-vec cosine recommender with success-rate reranker for quiver"

[dependencies]
quiver-core    = { path = "../core", version = "0.1.4" }
quiver-storage = { path = "../storage", version = "0.1.4" }
anyhow          = { workspace = true }
fastembed       = { workspace = true }
rusqlite        = { workspace = true }

[dev-dependencies]
chrono     = { workspace = true }
serde_json = { workspace = true }
tempfile   = { workspace = true }
