[package]
name = "toolhub-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
toolhub-core = { path = "../core" }
anyhow = { workspace = true }
rusqlite = { workspace = true }
refinery = { workspace = true }
r2d2 = { workspace = true }
r2d2_sqlite = { workspace = true }
sqlite-vec = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
