[package]
name = "quiver-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "SQLite + sqlite-vec + FTS5 storage layer with refinery migrations and r2d2 pool for quiver"

[dependencies]
quiver-core = { path = "../core", version = "0.1.1" }
anyhow = { workspace = true }
rusqlite = { workspace = true }
refinery = { workspace = true }
r2d2 = { workspace = true }
r2d2_sqlite = { workspace = true }
sqlite-vec = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
